--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -104,6 +104,16 @@ img {
   max-width:100%;
 }
 
+img.imgshadow {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+	margin-bottom: 40px;
+	-webkit-box-shadow: 0px 11px 27px -4px rgba(0,0,0,0.69);
+	-moz-box-shadow: 0px 11px 27px -4px rgba(0,0,0,0.69);
+	box-shadow: 0px 11px 27px -4px rgba(0,0,0,0.69)
+}
+
 header {
   width:270px;
   float:left;
@@ -185,6 +195,17 @@ hr {
   background:#e5e5e5;
   height:1px;
   margin:0 0 20px;
+}
+
+/* Gradient transparent - color - transparent */
+hr.style-two {
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0));
+}
+
+ul.sublist {
+	margin-bottom:0px;
 }
 
 footer {
