--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -253,8 +253,8 @@ footer {
   
   #movebadges {
     position:absolute;
-    right:50px;
-    top:400px;
+    right:70px;
+    top:65px;
   }
 }
 
@@ -267,7 +267,7 @@ footer {
     padding:0;
   }
 
-  header ul, header p.view {
+  header ul, header p.view, #movebadges {
     position:static;
   }
 
