--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -114,6 +114,12 @@ img.imgshadow {
 	box-shadow: 0px 11px 27px -4px rgba(0,0,0,0.69)
 }
 
+img.portrait {
+	-webkit-box-shadow: 0px 11px 27px -4px rgba(0,0,0,0.69);
+	-moz-box-shadow: 0px 11px 27px -4px rgba(0,0,0,0.69);
+	box-shadow: 0px 11px 27px -4px rgba(0,0,0,0.69)
+}
+
 header {
   width:270px;
   float:left;
