--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -105,9 +105,9 @@ img {
 }
 
 img.imgshadow {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 	margin-bottom: 40px;
 	-webkit-box-shadow: 0px 11px 27px -4px rgba(0,0,0,0.69);
 	-moz-box-shadow: 0px 11px 27px -4px rgba(0,0,0,0.69);
@@ -115,6 +115,7 @@ img.imgshadow {
 }
 
 img.portrait {
+  border-radius: 25px;
 	-webkit-box-shadow: 0px 11px 27px -4px rgba(0,0,0,0.69);
 	-moz-box-shadow: 0px 11px 27px -4px rgba(0,0,0,0.69);
 	box-shadow: 0px 11px 27px -4px rgba(0,0,0,0.69)
