--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -309,6 +309,19 @@ footer {
 
 /* SLIDE SHOW CSS */
 
+.picbox {
+  height:150px;
+  min-width:200px;
+  padding-bottom:20px;
+}
+
+.picbox .icntr {
+  padding-right: auto;
+  max-width:100%;
+  max-height:100%; 
+  display:inline-block;
+}
+
 /* center preview images */
 /*
 .pcntr{
