--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -311,20 +311,11 @@ position:relative;
 
 
 /* SLIDE SHOW CSS */
-/*
-.picbox {
-  height:150px;
-  min-width: 325px;
-  padding-bottom:20px;
-}
-*/
-.picbox .icntr {
-  max-width:100%;
-  max-height:100%; 
+.picbox .fillbox {
   display:inline-block;
 }
 
-.icntr {
+.fillbox {
   height:150px;
 }
 
