--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -121,6 +121,13 @@ img.portrait {
 	box-shadow: 0px 11px 27px -4px rgba(0,0,0,0.69)
 }
 
+img.preshadow {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 600px;
+}
+
 header {
   width:270px;
   float:left;
@@ -219,6 +226,7 @@ hr.style-three {
     width: 60%;
     margin-left: 20%;
     margin-right: 20%;
+    display: block;
 }
 
 ul.sublist {
@@ -266,12 +274,6 @@ footer {
     right:50px;
     top:52px;
   }
-  /*
-  #movebadges {
-    position:absolute;
-    right:70px;
-    top:60px;
-  }*/
 }
 
 @media print, screen and (max-width: 720px) {
@@ -283,7 +285,7 @@ footer {
     padding:0;
   }
 
-  header ul, header p.view { /*#movebadges*/
+  header ul, header p.view {
     position:static;
   }
 
